--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
 
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="Apod$ project">
+    <meta name="description" content="Apods project">
     <meta name="author" content="">
 
-    <title>Apod$</title>
+    <title>Apods</title>
 
     <!-- Bootstrap core CSS -->
 	<link href="css/modified-bootstrap/bootstrap.min.css" rel="stylesheet">
@@ -30,7 +30,7 @@
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg navbar-dark fixed-top" id="mainNav">
       <div class="container">
-        <a class="navbar-brand js-scroll-trigger" href="http://rainbow.nazwa.pl:8888/">Apod$</a>
+        <a class="navbar-brand js-scroll-trigger" href="http://rainbow.nazwa.pl:8888/">Apods</a>
         <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
           Menu
           <i class="fa fa-bars"></i>
@@ -48,23 +48,16 @@
             </li>
 			<li class="nav-item">
               <a class="nav-link js-scroll-trigger" href="#contact">Visit Us</a>
-            </li>
-			<div class="btn-group" role="group">
-				<button  class="nav-item js-scroll-trigger" id="btnGroupDrop1" type="button" class="btn btn-secondary dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-				  App Specification
-				</button>
-				<div class="dropdown-menu" aria-labelledby="btnGroupDrop1">
-				  <a class="dropdown-item" href="https://github.com/pankeny/apod-app">Github</a>
-				  <a class="dropdown-item" href="https://trello.com/b/znR0JF61/bogate-aplikacje-internetowe-pm">Trello</a>
-				  <a class="dropdown-item" href="https://www.facebook.com/dominik.wrona.58">Prototype</a>
-				  <a class="dropdown-item" href="https://console.firebase.google.com/project/appod-311f7/database">Firebase</a>
-				</div>
-			</div>
-			 <!-- <div class="dropdown-menu" aria-labelledby="btnGroupDrop1">
-			  <a class="dropdown-item" href="#">Dropdown link</a>
-			  <a class="dropdown-item" href="#">Dropdown link</a>
-			</div> -->
-            
+			</li>
+			<li class="nav-item dropdown-submenu">
+                  <a  class="nav-link js-scroll-trigger dropdown-item" tabindex="-1" href="#">Project</a>
+                  <ul class="dropdown-menu">
+                    <li class="dropdown-item"><a tabindex="-1" href="https://github.com/pankeny/apod-app">Github</a></li> 
+                    <li class="dropdown-item"><a href="https://trello.com/b/znR0JF61/bogate-aplikacje-internetowe-pm">Trello</a></li>
+                    <li class="dropdown-item"><a href="https://www.facebook.com/dominik.wrona.58">Prototype</a></li>
+					<li class="dropdown-item"><a href="https://console.firebase.google.com/project/appod-311f7/database">Firebase</a></li>
+                  </ul>
+                </li>    
           </ul>
         </div>
       </div>
@@ -173,7 +166,7 @@
 		   <div class="col-sm-4">
             <div class="team-screen">
               <img class="mx-auto " src="img/team/apod_acc.jpg" alt="">
-              <h4>Sign-up View</h4>
+              <h4>Sign-up view</h4>
               <p class="text-muted">You can make account with your own nickname</p>
 
             </div>
@@ -181,7 +174,7 @@
           <div class="col-sm-4">
             <div class="team-screen">
               <img class="mx-auto " src="img/team/apod_login.jpg" alt="">
-              <h4>Login View</h4>
+              <h4>Login view</h4>
               <p class="text-muted">You can log into your account</p>
    
             </div>
@@ -198,7 +191,7 @@
 		     <div class="col-sm-4">
             <div class="team-screen">
               <img class="mx-auto " src="img/team/apod_rank.jpg" alt="">
-              <h4>Rank View</h4>
+              <h4>Rank view</h4>
               <p class="text-muted">This screen shows rank of our Apods</p>
 
             </div>
@@ -219,7 +212,7 @@
         <div class="row">
           <div class="col-lg-12 text-center">
 			<h1><a class="section-heading text-uppercase" href="http://rainbow.nazwa.pl:8888/">Visit Us</a></h1>
-            <h3 class="section-subheading text-muted">You can visit us by clicking upper text or "Apod$" in top left corner</h3>
+            <h3 class="section-subheading text-muted">You can visit us by clicking upper text or "Apods" in top left corner</h3>
           </div>
         </div>
       </div>
@@ -230,7 +223,7 @@
       <div class="container">
         <div class="row">
           <div class="col-md-4">
-            <span class="copyright">Copyright &copy; Game$ 2018</span>
+            <span class="copyright">Copyright &copy; Apods 2018</span>
           </div>
         </div>
       </div>
