Changes in html

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
               <a class="nav-link js-scroll-trigger" href="#contact">Visit Us</a>
 			</li>
 			<li class="nav-item dropdown-submenu">
-                  <a  class="nav-link js-scroll-trigger dropdown-item" tabindex="-1" href="#">Project</a>
+                  <a  class="nav-link js-scroll-trigger dropdown-item" >Project</a>
                   <ul class="dropdown-menu">
                     <li class="dropdown-item"><a tabindex="-1" href="https://github.com/pankeny/apod-app">Github</a></li> 
                     <li class="dropdown-item"><a href="https://trello.com/b/znR0JF61/bogate-aplikacje-internetowe-pm">Trello</a></li>
