--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                   <ul class="dropdown-menu">
                     <li class="dropdown-item"><a tabindex="-1" href="https://github.com/pankeny/apod-app">Github</a></li> 
                     <li class="dropdown-item"><a href="https://trello.com/b/znR0JF61/bogate-aplikacje-internetowe-pm">Trello</a></li>
-                    <li class="dropdown-item"><a href="https://www.facebook.com/dominik.wrona.58">Prototype</a></li>
+                    <li class="dropdown-item"><a href="https://xd.adobe.com/view/26daf1e2-ea6e-46ae-5004-1a2c3f445fd9-50eb/">Prototype</a></li>
 					<li class="dropdown-item"><a href="https://console.firebase.google.com/project/appod-311f7/database">Firebase</a></li>
                   </ul>
                 </li>    
@@ -84,8 +84,14 @@
 														An APOD stands for Astronomy Picture Of the Day. It provides pictures in the field of astronomy with an explanation on what is on the picture.
 														With this app you can create a list of your favourite apods, so you can keep all of them in within your reach and access them immediately.
 														App also provides users a functionality of adding their own apods using phone camera.
-														The objective of the application is to create a society of astronomy enthusiasts and share astronomy all across the world.
-														<h4><i>LEARN STUDY ADMIRE <h3>APOD</h3></i></h4> keeps astronomy enthusiasts in one place</h3>
+														<p>The objective of the application is to create a society of astronomy enthusiasts and share astronomy all across the world.</p>
+														<h4><i>
+															LEARN STUDY ADMIRE
+																<h3 class="abt-section">APOD</h3>
+															</i>
+														</h4>
+														keeps astronomy enthusiasts in one place
+			</h3>
           </div>
         </div>
         <div class="row">
@@ -101,14 +107,14 @@
       <div class="container">
         <div class="row">
           <div class="col-lg-12 text-center">
-            <h2 class="section-heading text-uppercase">Our Amazing Team</h2>
-            <h3 class="section-subheading text-muted">Four enthusiasts of Web Development</h3>
+            <h2 class="section-heading text-uppercase">Project Team</h2>
+         
           </div>
         </div>
         <div class="row">
           <div class="col-sm-4">
             <div class="team-member">
-              <img class="mx-auto rounded-circle" src="img/team/kam.png" alt="">
+              <img class="mx-auto rounded-circle" src="img/team/bar.jpg" alt="">
               <h4>Bartosz Turek</h4>
               <p class="text-muted">Lead Developer</p>
              
@@ -116,7 +122,7 @@
           </div>
 		   <div class="col-sm-4">
             <div class="team-member">
-              <img class="mx-auto rounded-circle" src="img/team/kam.png" alt="">
+              <img class="mx-auto rounded-circle" src="img/team/kon.jpg" alt="">
               <h4>Konrad Małocha</h4>
               <p class="text-muted">Lead Developer</p>
 
@@ -124,7 +130,7 @@
           </div>
           <div class="col-sm-4">
             <div class="team-member">
-              <img class="mx-auto rounded-circle" src="img/team/kam.png" alt="">
+              <img class="mx-auto rounded-circle" src="img/team/kam.jpg" alt="">
               <h4>Kamil Szewczyk</h4>
               <p class="text-muted">Lead Developer</p>
    
@@ -132,7 +138,7 @@
           </div>
           <div class="col-sm-4">
             <div class="team-member">
-              <img class="mx-auto rounded-circle" src="img/team/kam.png" alt="">
+              <img class="mx-auto rounded-circle" src="img/team/dom.jpg" alt="">
               <h4>Dominik Wrona</h4>
               <p class="text-muted">Lead Developer</p>
 
