--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
       <div class="container">
         <div class="row">
           <div class="col-lg-12 text-center">
-            <h2 class="section-heading text-uppercase">Project Team</h2>
+            <h2 class="section-heading text-uppercase" id="team-mains">Project Team</h2>
          
           </div>
         </div>
