--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
 		   <div class="col-sm-4">
             <div class="team-screen">
 			  <h4>Add APOD</h4>
-              <img class="mx-auto " src="img/team/AddApod.jpg" alt="">
+              <img class="mx-auto " src="img/team/addApod.jpg" alt="">
               <p class="text-muted"></p>
 
             </div>
