--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
               <a class="nav-link js-scroll-trigger" href="#application">Application</a>
             </li>
 			<li class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="#download">Download</a>
+              <a class="nav-link js-scroll-trigger" href="https://expo.io/artifacts/1dd2f5d7-e45d-4f81-ab80-dbd3af99cdee">Download</a>
             </li>
 			<li class="nav-item dropdown-submenu">
                   <a  class="nav-link js-scroll-trigger dropdown-item" >Project</a>
@@ -266,7 +266,7 @@
         <div class="row">
           <div class="col-md-4">
             <span class="copyright">APOD </span>
-			<button type="button" class="btn btn-lg  justify-content-center"><i class="fas fa-download"></i> <a href="path_to_file">Download</a> </button>
+			<button type="button" class="btn btn-lg  justify-content-center"><i class="fas fa-download"></i> <a href="https://expo.io/artifacts/1dd2f5d7-e45d-4f81-ab80-dbd3af99cdee">Download</a> </button>
           </div>
         </div>
       </div>
