--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
           </div>
           <div class="col-sm-4">
             <div class="team-member">
-              <img class="mx-auto rounded-circle" src="img/team/dom.jpg" alt="">
+              <img class="mx-auto rounded-circle" src="img/team/dom.png" alt="">
               <h4>Dominik Wrona</h4>
               <p class="text-muted">Lead Developer</p>
 
