--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
         <div class="row">
           <div class="col-sm-4">
             <div class="team-member">
-              <img class="mx-auto rounded-circle" src="img/team/bar.jpg" alt="">
+              <img class="mx-auto rounded-circle" src="img/team/bar.png" alt="">
               <h4>Bartosz Turek</h4>
               <p class="text-muted">Team Lead Developer</p>
              
